tests/baselines/reference/assignFromStringInterface.errors.txt
tests/cases/conformance/types/primitives/string/assignFromStringInterface.ts(3,1): error TS2322: Type 'String' is not assignable to type 'string'.
  'string' is a primitive, but 'String' is a wrapper object. Prefer using 'string' when possible.


==== tests/cases/conformance/types/primitives/string/assignFromStringInterface.ts (1 errors) ====
    var x = '';
    var a: String;
    x = a;
    ~
!!! error TS2322: Type '{|String|0|}' is not assignable to type 'string'.
!!! error TS2322:   'string' is a primitive, but '{|String|1|}' is a wrapper object. Prefer using 'string' when possible.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:394:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:394:11
    a = x;